kubernetes/apps/external-endpoints/unifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Unifi"
    gethomepage.dev/description: "Network controller"
    gethomepage.dev/group: "Network"
    gethomepage.dev/icon: "unifi.png"
spec:
  parentRefs:
    - name: ${gatewayName}
      namespace: gateway
      sectionName: https
  hostnames:
    - "unifi.${domain}"
  rules:
    - backendRefs:
        - name: unifi
          port: 443
